# Adaptive-AI-Ride-Pooling

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202606270001_initial_schema.py  202606280001_add_booking_coordinates.py  202606290001_add_pool_driver.py  202606300001_add_driver_location.py  202606300001_add_weather_alert_notifications.py  202607010001_add_notification_category.py
backend/app/: main.py
backend/app/ai_core/driver_assignment/: __init__.py  constants.py  schemas.py  scoring.py  service.py
backend/app/api/driver/: __init__.py  dashboard.py  earnings.py  notifications.py  pool.py  profile.py  router.py  trips.py
backend/app/api/matching/: __init__.py  dependencies.py  routes.py
backend/app/api/passenger/: __init__.py  dependencies.py  routes.py
backend/app/api/v1/: router.py  (+1 more)
backend/app/config/: settings.py
backend/app/core/: errors.py
backend/app/database/: base.py  session.py
backend/app/dependencies/: database.py  driver.py
backend/app/models/: __init__.py  booking.py  driver.py  notification.py  passenger.py  ride_pool_group.py  ride_pool_member.py  trip_history.py  user.py  weather_alert.py  weather_alert_notification.py  weather_event.py
backend/app/optimizer/: __init__.py  backend_adapter.py  core.py
backend/app/repositories/: base.py  weather_alert.py
backend/app/schemas/: common.py  system.py
backend/app/services/: base.py  weather_alert.py
backend/app/utils/: fare.py
backend/tests/weather_alert/: test_service.py
(+188 files in other folders)
